# MonitoringMyPC

./: .gitignore  CMakeLists.txt  README.md  cpuComponent.cpp  gpuComponent.cpp  main.cpp  monitoringCom.hpp  terminalCommandExecute.cpp
build-dir/: CMakeCache.txt  Makefile  cmake_install.cmake  config.ini  monitoring
